--- a/src/assets/styles/mixin.styl
+++ b/src/assets/styles/mixin.styl
@@ -1,5 +1,14 @@
 ellipsis()
-    overflow : hidden
-    text-overflow : ellipsis
-    display : -webkit-box
-    -webkit-box-orient : vertical
+    overflow  hidden
+    text-overflow  ellipsis
+    display  -webkit-box
+    -webkit-box-orient  vertical
+flex-center()
+    display flex
+    justify-content center
+    align-items center
+flex-between($direction=row)
+    display flex
+    justify-content: space-between
+    align-items: center
+    flex-direction: $direction
